--- a/assets/css/jump-style.css
+++ b/assets/css/jump-style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    max-width: 900px;
+    width: 100%;
+    margin: 0;
     background-color: rgb(10, 0, 10);
     padding: 50px 20px;
     text-align: left;
